<resources>
    <string name="app_name">Pozorište</string>
    <string name="labelNaslov">Narodno pozorište</string>
    <string name="labelPrijava">Već imate nalog? Prijavite se:</string>
    <string name="labelRegistracija">Nemate nalog? Registrujte se:</string>
    <string name="inputEmail">Unesite Vaš email</string>
    <string name="inputLozinka">Unesite Vašu lozinku</string>
    <string name="inputIme">Unesite Vaše ime</string>
    <string name="inputPrezime">Unesite Vaše prezime</string>
    <string name="labelIme">Ime:</string>
    <string name="labelPrezime">Prezime:</string>
    <string name="labelEmail">Email:</string>
    <string name="labelLozinka">Lozinka:</string>
    <string name="labelLozinka2">Ponovite lozinku:</string>
    <string name="buttonPrijava">Prijavite se</string>
    <string name="checkBoxUslovi">Klikom na ovo polje, izjavljujem da sam pročitao/la i prihvatam uslove korišćenja aplikacije</string>
    <string name="buttonRegistracija">Registrujte se</string>
    <string name="labelRodjendan">Vaš datum rođenja:</string>
    <string name="labelPrijava2">Prijavite se:</string>
    <string name="buttonPovratak">Nazad</string>
    <string name="buttonRezervacije">Rezervisane ulaznice</string>
    <string name="buttonOdjaviSe">Odjavite se</string>
    <string name="labelSpisak">Ovde možete videti spisak predstava:</string>
    <string name="labelOpis">Opis:</string>
    <string name="labelRezervisiteUlaznice">Rezervišite ulaznice</string>
    <string name="labelBina">B I N A</string>
    <string name="buttonRezervisi">Rezerviši</string>
    <string name="labelIzaberiteSedista">Izaberite sedišta:</string>
    <string name="labelZauzeto">Zauzeta sedišta</string>
    <string name="labelOdabrano">Odabrana sedišta</string>
    <string name="labelSlobodno">Slobodna sedišta</string>
    <string name="rezervacija">Rezerviši</string>
    <string name="labelRezervisaneUlazniceNaslov">Ovde možete videti Vaše rezervisane ulaznice:</string>
</resources>